# task.md-utilities

./: .envrc  .gitattributes  .gitignore  .mcp.json  README.md  config.json  config.yaml  docker-compose.yml  pyproject.toml
mcp_task_service/: .dockerignore  Dockerfile  README.md  docker-compose.yml  requirements.txt  server.py
task_api/: Dockerfile  README.md  app.py  config.py  docker-compose.yml  gunicorn.conf.py  models.py  requirements.txt
task_api/routes/: health.py  lanes.py  operations.py  tasks.py
task_lib/: api_client.py  config.py  task.py  task_manager.py
task_tui/: api.py  app.py  screens.py  widgets.py
tests/: test_api_client.py  test_cli.py  test_config.py  test_mcp_server.py  test_task.py  test_task_api.py  test_task_manager.py  test_tui.py
