[project]
name = "task-md-utilities"
version = "0.1.0"
description = ""
authors = [
    {name = "Scott Hendrickson",email = "scott@drskippy.net"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai (>=1.82.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "task"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
