[project]
name = "task-md-utilities"
version = "0.1.0"
description = ""
authors = [
    {name = "Scott Hendrickson",email = "scott@drskippy.net"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "click (>=8.1.0)",
    "rich (>=13.0.0)",
    "requests (>=2.31.0)",
    "flask (>=3.0.0)",
    "gunicorn (>=21.2.0)",
    "pydantic (>=2.7.0)",
    "pyyaml (>=6.0.0)",
    "fastmcp (>=2.0.0)",
    "textual (>=8.2.3,<9.0.0)",
]

[project.optional-dependencies]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=4.0.0)",
    "black (>=24.0.0)",
    "mypy (>=1.8.0)",
    "types-requests (>=2.31.0)",
    "types-pyyaml (>=6.0.0)",
]

[tool.poetry]
packages = [
    {include = "task_lib"},
    {include = "task_api"},
    {include = "task_tui"},
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)"
]
